# attribute_pipeline

./: Cargo.toml
src/: data_extraction.rs  data_source.rs  data_stream.rs  handlers.rs  main.rs
