[package]
name = "attribute_pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
base64 = "0.12"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.3", features = ["full"] }
fastnbt = "2.4.4"
flate2 = "1.0.26"
tokio-stream = "0.1.14"
futures = "0.3.28"
env_logger = "0.10.0"
lazy_static = "1.4.0"
